--- a/01_serving_a_model/Train_and_serve_a_basic_model_for_the_iris_dataset.ipynb
+++ b/01_serving_a_model/Train_and_serve_a_basic_model_for_the_iris_dataset.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "## Getting a dataset\n",
     "\n",
-    "For now, this will be a very simple step. We will be using a scikit-learn dataset, the now famous Iris dataset. It is small, easily downloadable on your laptop, already cleaned up. Later, we will deal with dirty datasets, too big too load on a single machine.\n",
+    "For now, this will be a very simple step. We will be using a scikit-learn dataset, the now famous Iris dataset. It is small, easily downloadable on your laptop, and already cleaned up. Later, we will deal with dirty datasets, too big too load on a single machine.\n",
     "\n",
     "But for now, we want to focus on the architecture, and the fastest way to shipping a model to production."
    ]
@@ -81,14 +81,16 @@
    "id": "aa5b8d82",
    "metadata": {},
    "source": [
-    "See how dumb that model is ? Accuracy is only 39.5%. I'm not even pretending to care. We are going to ship this one, then CI and CD (more about this in the next examples) will continuously improve this model until it's state-of-the-art.\n",
+    "See how dumb that model is ? Accuracy is only 39.5%. I'm not even pretending to care. We are going to ship this one, then we will continuously improve this model with the CI until it's (almost) state-of-the-art.\n",
+    "\n",
+    "\"Regular\" code is built by a CI. Nowadays, nobody (I hope), ships code that has been build locally on his machine. Well it should be the same for model training in machine learning. Your model should be trained by a CI (or something equivalent, like Airflow).\n",
     "\n",
     "For now, the most important thing is shipping this model to prod. Even if it's so bad it could hurt your business. Because even if it's in production, nobody will be actually listening to your endpoint. But it's there, and it's actually the most difficult thing to do."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1066c430",
+   "id": "e7e97a24",
    "metadata": {},
    "source": [
     "# Serving a model\n",
@@ -103,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "616077b0",
+   "id": "ff3e9695",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b39c9bd0",
+   "id": "abb18c2d",
    "metadata": {},
    "source": [
     "You could just run this code snippet, go to http://127.0.0.1:8000/docs and toy around with the API (and see how cool FastAPI is), but if you want to have a quick feedback loop, it is best to have small unit tests.\n",
@@ -145,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b940943c",
+   "id": "c2d28d93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2fc0bce",
+   "id": "4a9f1b1b",
    "metadata": {},
    "source": [
     "We'll see later how we can leverage the different kinds of tests and how we can leverage them to improve our MLOps feedback loop."
@@ -173,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c356b53f",
+   "id": "0a6dff98",
    "metadata": {},
    "source": [
     "## Serving a model (for real)\n",
@@ -185,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bc3c976",
+   "id": "756e5a67",
    "metadata": {},
    "source": [
     "```Dockerfile\n",
@@ -199,19 +201,21 @@
     "WORKDIR /usr/src/app\n",
     "\n",
     "RUN pip install pipenv\n",
+    "\n",
+    "COPY ./Pipfile* .\n",
+    "# this is necessary when pipenv run inside a container\n",
+    "RUN pipenv install --deploy\n",
+    "\n",
     "COPY ./main.py .\n",
     "\n",
-    "# this is necessary when pipenv run inside a container\n",
-    "RUN pipenv install --system --deploy\n",
-    "\n",
     "# the command that will be launched in the container\n",
-    "CMD [\"uvicorn\", \"main:app\", \"--host\", \"0.0.0.0\", \"--port\", \"8000\"]\n",
+    "CMD [\"pipenv\", \"run\",\"uvicorn\", \"main:app\", \"--host\", \"0.0.0.0\", \"--port\", \"8000\"]\n",
     "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fdb607fc",
+   "id": "6a5ce42c",
    "metadata": {},
    "source": [
     "This is not the place (nor I feel qualified) to explain how Docker and the Dockerfile work. But I added some comments line by line.\n",
@@ -224,12 +228,12 @@
     "\n",
     "Want to run the container ? Type `make run`, go to http://localhost:8000/docs, and see how the magic happens.\n",
     "\n",
-    "Want to kill the container ? Type `make kill` (only works if this is the only container running)"
+    "Want to kill the container ? Type `make kill`."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f85e58e9",
+   "id": "b362c921",
    "metadata": {},
    "source": [
     "```make\n",
@@ -237,16 +241,16 @@
     "\tdocker build . -t basic-model-serve\n",
     "\n",
     "run:\n",
-    "\tdocker run --rm -d -p 8000:8000 basic-model-serve\n",
+    "\tdocker run --name basic-model-serve --rm -d -p 8000:8000 basic-model-serve\n",
     "\n",
     "kill:\n",
-    "\tdocker kill $(docker ps -a -q)\n",
+    "\tdocker kill basic-model-serve\n",
     "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dd33248e",
+   "id": "6f95455c",
    "metadata": {},
    "source": [
     "# Conclusion\n",
