Log model from train.py and fetch at the startup of serve.py

--- a/02_tracking_a_model/Tracking_your_model.ipynb
+++ b/02_tracking_a_model/Tracking_your_model.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "4d543082",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "1252de16",
    "metadata": {},
    "outputs": [],
@@ -121,8 +121,118 @@
     "\n",
     "That's a lot of dev. Good news : it's called an ML Model Registry, and somebody has already done it for you. Today we are going to use [MLFlow](https://mlflow.org/), but there are some others ([neptune.ai](https://neptune.ai/) or [Amazon SageMaker Registry](https://docs.aws.amazon.com/sagemaker/latest/dg/model-registry.html) for example).\n",
     "\n",
-    "Of course you should use it with an external storage, like a cloud storage, but we are just toying around, it will be easier to store the models locally (plus, this way we don't have to pay for a cloud storage service)."
+    "Of course you should use it with an external storage, like a cloud storage, but we are just toying around, it will be easier to store the models locally (plus, this way we don't have to pay for a cloud storage service).\n",
+    "\n",
+    "## Organizing your services\n",
+    "\n",
+    "Ok now things will get a little bit more _DevOpsy_ and a little lest _data sciencish_. We will need at least two containers :\n",
+    "- one that runs the MLFlow server\n",
+    "- one that runs a PostgreSQL database\n",
+    "\n",
+    "Actually, there should be a third container to run your training, but I'll save you this step for this time.\n",
+    "The MLFlow container should be accessible from your notebooks, and the MLFlow server should be able to communicate with the Postgres container.\n",
+    "\n",
+    "To do all this locally, you can use Docker Compose. So ... bye bye Python, hello YAML. This what your` docker-compose.yaml` :\n",
+    "\n",
+    "```yaml\n",
+    "services:\n",
+    "  db:\n",
+    "    image: \"postgres\"\n",
+    "    environment:\n",
+    "      POSTGRES_USER: mlflow\n",
+    "      POSTGRES_PASSWORD: mlflow\n",
+    "\n",
+    "  mlflow:\n",
+    "    build: ./mlflow\n",
+    "    ports:\n",
+    "      - \"5001:5000\"\n",
+    "    expose:\n",
+    "      - 5000\n",
+    "\n",
+    "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "bc36dd5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Successfully registered model 'sk-learn-dummy-model'.\n",
+      "2022/10/10 13:32:20 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: sk-learn-dummy-model, version 1\n",
+      "Created version '1' of model 'sk-learn-dummy-model'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import mlflow\n",
+    "import mlflow.sklearn\n",
+    "from mlflow import MlflowClient\n",
+    "\n",
+    "mlflow.set_tracking_uri(\"http://localhost:5001\")\n",
+    "\n",
+    "with mlflow.start_run(run_name=\"EXAMPLE_RUN\") as run:\n",
+    "    # Log the sklearn model and register as version 1\n",
+    "    mlflow.sklearn.log_model(\n",
+    "        sk_model=dummy_classifier,\n",
+    "        artifact_path=\"sklearn-model\",\n",
+    "        registered_model_name=\"sk-learn-dummy-model\"\n",
+    "    )\n",
+    "\n",
+    "client = MlflowClient()\n",
+    "client.transition_model_version_stage(\n",
+    "    name=\"sk-learn-dummy-model\",\n",
+    "    version=1,\n",
+    "    stage=\"Production\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54637a10",
+   "metadata": {},
+   "source": [
+    "Wow ! We now have logged our model in the Mlflow Model Registry, and we tagged it for Production from the training side. It's now time to fetch this model from the registry on the serving side."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d95dc015",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import mlflow.pyfunc\n",
+    "\n",
+    "model_name = \"sk-learn-dummy-model\"\n",
+    "model_version = 1\n",
+    "\n",
+    "fetched_model = mlflow.pyfunc.load_model(\n",
+    "    model_uri=f\"models:/{model_name}/{model_version}\"\n",
+    ")\n",
+    "\n",
+    "assert (fetched_model.predict(X_test[0:10]) == dummy_classifier.predict(X_test[0:10])).all()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8fca6bd2",
+   "metadata": {},
+   "source": [
+    "Remember, we need to do this in a `serve.py` file. This begs the question : when should we fetch the model. The simplest way (and this is what we are going to do at the step 2 of our journey), is to fetch it at the startup of our webservice. But there are other ways : embedding it in the container at build time, load it from a mounted volume etc, or even use dedicated tools that do all the heavy lifting for you."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1406febf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
