Conclusion for this part

--- a/02_tracking_a_model/Tracking_your_model.ipynb
+++ b/02_tracking_a_model/Tracking_your_model.ipynb
@@ -232,7 +232,65 @@
    "id": "1406febf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# this should be in a file called \"serve.py\"\n",
+    "\n",
+    "from fastapi import FastAPI\n",
+    "from pydantic import BaseModel\n",
+    "import mlflow.pyfunc\n",
+    "\n",
+    "app = FastAPI()\n",
+    "\n",
+    "\n",
+    "class Iris(BaseModel):\n",
+    "    sepal_length: float\n",
+    "    sepal_width: float\n",
+    "    petal_length: float\n",
+    "    petal_width: float\n",
+    "\n",
+    "\n",
+    "class Label(BaseModel):\n",
+    "    label: int\n",
+    "\n",
+    "\n",
+    "@app.on_event(\"startup\")\n",
+    "async def startup_event():\n",
+    "    global model\n",
+    "    model_name = \"sk-learn-dummy-model\"\n",
+    "    model_stage = \"Production\"\n",
+    "\n",
+    "    mlflow.set_tracking_uri(\"http://localhost:5001\")\n",
+    "    model = mlflow.pyfunc.load_model(\n",
+    "        model_uri=f\"models:/{model_name}/{model_stage}\"\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "@app.post(\"/label\", response_model=Label)\n",
+    "async def label(iris: Iris):\n",
+    "    iris_data = [[iris.sepal_length, iris.sepal_width, iris.petal_length, iris.petal_width]]\n",
+    "    label = model.predict(iris_data)\n",
+    "    return Label(label=label[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f1b601e",
+   "metadata": {},
+   "source": [
+    "🎉 Tadaa 🎉 ! At the startup of the application, the model is fetched from the MLFlow registry, and you can use it as if it has just been freshly trained !\n",
+    "\n",
+    "Now you should package this in a Docker container, but I'll save you (and me) the hassle for this time.\n",
+    "\n",
+    "We have not addressed any security issues, but of course, you should be careful with your model registry. Maybe it should be accessed only from your virtual private cloud, or you should use credentials to access MLFlow.\n",
+    "\n",
+    "If you are using an external storage service (such as S3 for example), then you should give access to this service to your MFlow container and your application container.\n",
+    "\n",
+    "Next time, we will use even more features from MLFlow to:\n",
+    "1. 🏗️ Create a better model\n",
+    "2. 🔍 Compare this model to the one in production\n",
+    "3. 🤖 Automatically tag the better model as the production one\n",
+    "4. 💰 Repeat for infinite money"
+   ]
   }
  ],
  "metadata": {
